--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <script src="./common.js"></script>
 </head>
 
 <body>
-
-    <script src="./datatypes.js"></script>
+    <input type="text" onkeydown="processChange()">
 </body>
 
 </html>
